Added Large Scale DM to interests, removed mentors and instructors from the project descriptions; removed section on internships-everything comes under experience

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -195,7 +195,7 @@
 Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476} 
 \end{tabular}
 
-\section{\textbf{Interests}} Data Mining and Analysis, Machine Learning, Information Retrieval
+\section{\textbf{Interests}} Large Scale Data Mining and Analysis, Machine Learning, Information Retrieval and Software Engineering
 
 \section{\textbf{Education}}
 \href{http://www.stanford.edu/}{\textbf{Stanford University}},\hfill \textit{Sep '08 - Apr '10}
@@ -249,11 +249,9 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
         \item Member of a team involved in the addition of new features to CALO, a system that extracts decisions from multi-party meetings  to enable the effective handling of feedbacks.
         \item Also involved in evaluation of the Service Manager
         \item Implementation used Java, Swing and libSVM
-         \item \emph{Mentor : Prof. Stanley Peters}
+       %\item \emph{Mentor : Prof. Stanley Peters}
        \end{compactitem}
 
-
-\section{\textbf{ Internships}}
 \href{http://www.apple.com}{\textbf{Apple Inc.}},\hspace{1cm}\textit{Summer Intern}\hfill \textit{June 09 to Mar 10}\\
  \emph{Internet Services Group}
        \begin{compactitem}
@@ -271,7 +269,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
         
         \item {Implemented using Java, on top of Lucene. The semantics information were obtained from WordNet}
         \item Published as a \href{http://www.hpl.hp.com/techreports/2009/HPL-2009-51.pdf}{HP Labs Technical Report in 2009}.
-        \item \emph{Mentor : Dr. Krishnan Ramanathan}
+       %\item \emph{Mentor : Dr. Krishnan Ramanathan}
        \end{compactitem}
 
 \blankline
@@ -283,7 +281,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
        \begin{compactitem}
         \item {Built a system  that extracts information of a continuous path from any arbitrary raw image using  graph-theoretic methods and provides input to the indigenous \emph{Sensor-cum-Manipulator} ,a Parallel planar kinematic robot.}
           \item {Implemented using C, Matlab(for image processing) and VB ( as a wrapper GUI)}
-        \item \emph{Mentors : Mr. Gaurav Bhutani and Dr. T.A. Dwarakanath}
+        %\item \emph{Mentors : Mr. Gaurav Bhutani and Dr. T.A. Dwarakanath}
         \end{compactitem}
 
 %\pagebreak
@@ -303,44 +301,44 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \begin{compactitem}
 \item {Implemented a People Recommendation System on Twitter (in Python) by a combination of several algorithms, that included collaborative filtering, network analysis and semantic consideration .}
 \item{Designed and implemented an URL Recommendation system by analysis of tags from \emph{Delicious}}
-\item \emph{Instructor: Prof. Andreas Weigend, Stanford University}
+%\item \emph{Instructor: Prof. Andreas Weigend, Stanford University}
 \end{compactitem}
 \spc
 \textit{URL Recommendation Based on Asymmetric Tag Similarity and Diffusion-Based Grouping}
 \begin{compactitem}
 \item {Implemented an URL Recommendation system by analysis of tag similarity using data from ShareThis and Delicious using MapReduce and Partition based Joins on top of the Aster Cluster.}
-\item \emph{Instructors : Prof. Jeff Ullman and Prof. Anand Rajaraman , Stanford University}
+%\item \emph{Instructors : Prof. Jeff Ullman and Prof. Anand Rajaraman , Stanford University}
 \end{compactitem}
 \spc
 
 \textit{Finding Answerers on Yahoo! Answers}
 \begin{compactitem}
 \item {Designed an implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and auxiliary information. The result can be used to determine the routing for the new questions.}
-\item \emph{Instructor :  Prof.Jure Leskovic, Stanford University}
+%\item \emph{Instructor :  Prof.Jure Leskovic, Stanford University}
 \end{compactitem}
 \spc
 
 \textit{Analysis of Text Based Classifiers}
 \begin{compactitem}
 \item {Implemented and analyzed the performance of different Na\"{\i}ve Bayes classifiers on the 20-Newsgroups dataset, using Java and Lucene}
-\item \emph{Instructors :  Prof.Chris Manning and Prof. Prabhakar Raghavan , Stanford University}
+%\item \emph{Instructors :  Prof.Chris Manning and Prof. Prabhakar Raghavan , Stanford University}
 \end{compactitem}
 \spc
 
 \textit{Comparison of Similarity Search Algorithms over Inverted Indexes}
 \begin{compactitem}
 \item {Implemented and analyzed the performance of commonly used indexing similarity search algorithms - Term-at-a-Time and Document-at-a-Time. Also optimized the algorithms  with efficient index compression.}
-\item \emph{Instructors :  Prof.Andrei Broder and Prof. Vanja Josifovski, Stanford University}
+%\item \emph{Instructors :  Prof.Andrei Broder and Prof. Vanja Josifovski, Stanford University}
 \end{compactitem}
 \spc
 
 
-\textit{System for Man-in-the-Middle Attack}
-\begin{compactitem}
-\item {Implemented and analyzed a \textit{Man In The Middle} attack on a SSL/TLS Connection as a part of the course project for Cryptography.}
-\item \emph{Instructors :  Prof.Dan Boneh, Stanford University}
-\end{compactitem}
-\spc
+%\textit{System for Man-in-the-Middle Attack}
+%\begin{compactitem}
+%\item {Implemented and analyzed a \textit{Man In The Middle} attack on a SSL/TLS Connection as a part of the course project for Cryptography.}
+%%\item \emph{Instructors :  Prof.Dan Boneh, Stanford University}
+%\end{compactitem}
+%\spc
 
 %\textit{Vocabulary Builder - An iPhone App Making Words Fun }
 %\begin{compactitem}
@@ -358,25 +356,25 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \textit{RefMed - A Physician Referral and Review Service}
 \begin{compactitem}
 \item {Designed and developed a physician referral and review service that enables patients to review and rate the physicians and facilitates the physicians to recommend other doctors to their patients.}
-\item \emph{Instructor :  Prof. Amar Das, Stanford University}
+%\item \emph{Instructor :  Prof. Amar Das, Stanford University}
 \end{compactitem}
 \spc
 \textit{An Ontology-based Automatic Staging system for Cancer}
 \begin{compactitem}
 \item {Developed a Automatic Staging System for Breast Cancer over the NCI Thesaurus using SWRL, OWL and Prot\'{e}g\'{e}}
-\item \emph{Instructor :  Prof. Mark Musen, Stanford University}
+%\item \emph{Instructor :  Prof. Mark Musen, Stanford University}
 \end{compactitem}
 \spc
 \textit{Implementation Of a Search Engine for Personalized Information Retrieval by profiling of user data}
 \begin{compactitem}
 \item Designed and implemented  a prototype search engine that incorporates an additional dimension of Personalization through User Profiling for Enhanced relevancy.
-\item \emph{Mentors : Dr. Bharat Deshpande and Mr. Mangesh Bedekar , BITS Pilani Goa Campus}
+%\item \emph{Mentors : Dr. Bharat Deshpande and Mr. Mangesh Bedekar , BITS Pilani Goa Campus}
 \end{compactitem}
 \spc
 \textit{Time Table Generator}
 \begin{compactitem}
 \item Implemented a system for automating the process of timetable generation for a University with its constraints, using a sub-optimal graph coloring approach for Constraint Satisfaction.
-\item{Algorithms implemented in C. UI implemented in VC++}
+%\item{Algorithms implemented in C. UI implemented in VC++}
 \end{compactitem}
 \spc
 %%\textit{Comprehending PageRank - its analysis and implementation }\hfill \textit{Aug 07 -- Dec 07}
@@ -388,7 +386,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \textit{An Expert System for selection of Polymer Composite Systems }
 \begin{compactitem}
 \item Implemented a novel method for evaluation and ranking of constituent materials for composite products using \emph{TOPSIS} , an MADM (Multiple Attribute Decision Making) approach that ensures an optimum solution for the characteristics desired.
-\item \emph{Mentor : Dr. Durai Prabhakaran, BITS Pilani Goa Campus}
+%\item \emph{Mentor : Dr. Durai Prabhakaran, BITS Pilani Goa Campus}
 \end{compactitem}
 %%\spc
 %%\textit{Software Development for Management of Merit-cum-Need Scholarship}\hfill \textit{Jan 07 -- May 07}
@@ -406,7 +404,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \section{\textbf{Skills}}
 \emph{Languages}: Java, Pig, Python, C, SQL\\
 \emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), HBase \\
-\emph{Tools and  Platforms}: Mahout, Teradata,  Weka, Eclipse,\LaTeX{} , Octave, Weka\\
+\emph{Tools and  Platforms}: Mahout, Teradata,  Weka, R, Eclipse,\LaTeX{} , Octave\\
 \emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
 
 
