Minor formatting changes.

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -202,9 +202,9 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \begin{outerlist}
 \item[] M.S. \href{http://www.cs.stanford.edu/}{Computer Science}\hfill{GPA : 3.86 / 4.0}
       \begin{innerlist}
-        \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to the elite few for Graduate Study abroad.
+        \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to the elite few for graduate study in the US.
      
-         \item \emph{Relevant Coursework : } \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business (A+), \href{http://www.stanford.edu/class/msande239/}{Computational Advertising(A+)}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search }(A),  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}(A), \href{http://cs345a.stanford.edu}{Data Mining}(A), \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis (A-)}, Biomedical Systems Design(A+),  , \href{http://www.stanford.edu/}{Modern Applied Statistical Learning },\href{http://www.stanford.edu/}{iPhone Application Programming}
+         \item \emph{Relevant Coursework : } \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business (A+), \href{http://www.stanford.edu/class/msande239/}{Computational Advertising(A+)}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search }(A),  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}(A), \href{http://cs345a.stanford.edu}{Data Mining}(A), \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis (A-)}, Biomedical Systems Design(A+), \href{http://www.stanford.edu/}{Modern Applied Statistical Learning }, \href{http://www.stanford.edu/}{iPhone Application Programming}
 
          %, \href{http://cs245.stanford.edu}{Database Systems Principles}
         \end{innerlist}
@@ -216,7 +216,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \begin{outerlist}
 \item[] M Sc.(Tech.) {Information Systems} \hfill{CGPA : 9.95/10.0}
         \begin{innerlist}
-        \item Ranked No. 1 in Information Systems Department
+        \item Ranked \# 1 in Information Systems Department
         \item Recipient of the Silver Medal awarded by BITS to the second rank holder in the graduating class of 2008.
         \item \emph{Relevant Coursework : }Artificial Intelligence, Data Structures \& Algorithms, Software Engineering, Probability \& Statistics, Discrete Structures for Computer Science, Data Mining.
 %%        \item Course Topper in 20 courses, including Data Structures and Algorithms, Symbolic Logic and Software Engineering through my undergraduate study.
@@ -234,20 +234,47 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\textbf{Experience}}
-\href{http://www.apple.com}{\textbf{Apple Inc.}},\hspace{1cm}\textit{Software Engineer}\hfill \textit{Apr '10 to Mar '13}\\
- \emph{Internet Services Group}
-       \begin{compactitem}
-        \item {Worked on Spam and Fraud Detection problems using Machine Learning and large scale data mining techniques. }
-       \end{compactitem}
-       
-       \href{http://www.apple.com}{\textbf{Apple Inc.}},\hspace{1cm}\textit{Summer Intern}\hfill \textit{June 09 to Mar 10}\\
- \emph{Internet Services Group}
-       \begin{compactitem}
-        \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
-        \item {Member of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment. }
-       % \item \emph{Mentor : Mr. Vipul Pandey}
-       \end{compactitem}
+\href{http://www.apple.com}{\textbf{Apple Inc.}}\hfill \textit{Apr '10 to Mar '13}\\
 
+\begin{outerlist}
+\item[] Software Engineer - Maps Data Validation \hfill{May '13 - present}
+        \begin{innerlist}
+	\item TODO
+        \end{innerlist}
+\end{outerlist}
+
+\begin{outerlist}
+\item[] Software Engineer - Internet Services \hfill{Jan '12 - May '13}
+
+        \begin{innerlist}
+	\item TODO
+        \end{innerlist}
+\end{outerlist}
+
+\begin{outerlist}
+\item[] Software Engineer \hfill{Jan '12 - May '12}
+        \begin{innerlist}
+	\item TODO
+        \end{innerlist}
+\end{outerlist}
+
+\begin{outerlist}
+\item[] Software Engineer \hfill{Apr '10 - Apr '11}
+        \begin{innerlist}
+        \item Worked on machine learning techniques for spam detection on Ping.
+        \end{innerlist}
+\end{outerlist}
+
+\begin{outerlist}
+\item[] Summer Intern \hfill{June '09 to Mar '10}
+        \begin{innerlist}
+        \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
+        \item {Part of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment. }
+        \item {Project involved use and analysis of several state-of-the-art machine learning techniques for feature engineering, feature selection, skew handling in datasets, model comparisons for supervised learning, ensemble techniques for classifiers and evaluation of results.}
+         \item {Best model was selected from a collection of more than 2200 models and performed  }
+        \item {Used Java, libSVM, Weka.}
+        \end{innerlist}
+\end{outerlist}
 
 \blankline
 
@@ -293,8 +320,6 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \item \emph{Instructor: Prof. Daphne Koller, Stanford University}
 \end{compactitem}
 \spc
-
-
 
 \textit{Recommendation Systems based on Delicious and Twitter} 
 \begin{compactitem}
