Minor formatting changes, Added brief explanations to Apple projects. Removed Biomed Systems design and iPhone Programming from Relevant coursework.

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -204,8 +204,9 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
       \begin{innerlist}
         \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to the elite few for graduate study in the US.
      
-         \item \emph{Relevant Coursework : } \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business (A+), \href{http://www.stanford.edu/class/msande239/}{Computational Advertising(A+)}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search }(A),  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}(A), \href{http://cs345a.stanford.edu}{Data Mining}(A), \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis (A-)}, Biomedical Systems Design(A+), \href{http://www.stanford.edu/}{Modern Applied Statistical Learning }, \href{http://www.stanford.edu/}{iPhone Application Programming}
-
+         \item \emph{Relevant Coursework : } \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business (A+), \href{http://www.stanford.edu/}{Modern Applied Statistical Learning }, \href{http://www.stanford.edu/class/msande239/}{Computational Advertising(A+)}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search }(A),  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}(A), \href{http://cs345a.stanford.edu}{Data Mining}(A), \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis}.
+         %, Biomedical Systems Design(A+)
+         %,  \href{http://www.stanford.edu/}{iPhone Application Programming}
          %, \href{http://cs245.stanford.edu}{Database Systems Principles}
         \end{innerlist}
 \end{outerlist}
@@ -246,24 +247,42 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \begin{outerlist}
 \item[] Software Engineer - Internet Services \hfill{Jan '12 - May '13}
 
-        \begin{innerlist}
-	\item TODO
-        \end{innerlist}
+	\begin{outerlist}
+		\item[] Reputation/Indirect Fraud Detection on iTunes Appstore \hfill{Sep '11 - May '13}
+		\begin{innerlist}
+			\item TODO
+		\end{innerlist}
+	\end{outerlist}
+	
+	\begin{outerlist}
+		\item[] Account Creation Fraud Detection on iTunes \hfill{Jan '11 - May '12}
+		\begin{innerlist}
+			\item TODO
+		\end{innerlist}
+	\end{outerlist}
+
+	\begin{outerlist}
+	\item[] Spam Detection on iTunes Ping comments \hfill{Apr '10 - June '11}
+	        \begin{innerlist}
+	        \item TODO Worked on machine learning techniques for spam detection on Ping.
+	        \end{innerlist}
+	\end{outerlist}
+	
 \end{outerlist}
 
-\begin{outerlist}
-\item[] Software Engineer \hfill{Jan '12 - May '12}
-        \begin{innerlist}
-	\item TODO
-        \end{innerlist}
-\end{outerlist}
-
-\begin{outerlist}
-\item[] Software Engineer \hfill{Apr '10 - Apr '11}
-        \begin{innerlist}
-        \item Worked on machine learning techniques for spam detection on Ping.
-        \end{innerlist}
-\end{outerlist}
+%\begin{outerlist}
+%\item[] Software Engineer \hfill{Jan '12 - May '12}
+%        \begin{innerlist}
+%	\item TODO
+%        \end{innerlist}
+%\end{outerlist}
+%
+%\begin{outerlist}
+%\item[] Software Engineer \hfill{Apr '10 - Apr '11}
+%        \begin{innerlist}
+%        \item Worked on machine learning techniques for spam detection on Ping.
+%        \end{innerlist}
+%\end{outerlist}
 
 \begin{outerlist}
 \item[] Summer Intern \hfill{June '09 to Mar '10}
@@ -271,7 +290,6 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
         \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
         \item {Part of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment. }
         \item {Project involved use and analysis of several state-of-the-art machine learning techniques for feature engineering, feature selection, skew handling in datasets, model comparisons for supervised learning, ensemble techniques for classifiers and evaluation of results.}
-         \item {Best model was selected from a collection of more than 2200 models and performed  }
         \item {Used Java, libSVM, Weka.}
         \end{innerlist}
 \end{outerlist}
@@ -279,11 +297,11 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \blankline
 
 \href{http://www.hpl.hp.com/india/}{\textbf{Hewlett Packard Labs-India}\hspace{1cm}\textit{Research Intern}\hfill \textit{Jan 08 to June 08}}\\
-\emph{STAIR : System for Topical and Aggregated Information Retrieval}
+\emph{STAIR : System for Topical and Aggregated Information Retrieval.}
        \begin{compactitem}
         \item {Developed the architecture and the prototype of STAIR - an IR system that  applied of a combination of Collaborative analysis and Focused Crawling techniques on the web documents to provide personalized, consolidated information relevant to the used as an aggregated PDF document.}
         
-        \item {Implemented using Java, on top of Lucene. The semantics information were obtained from WordNet}
+        \item {Implemented using Java, on top of Lucene. The semantics information were obtained from WordNet.}
         \item Published as a \href{http://www.hpl.hp.com/techreports/2009/HPL-2009-51.pdf}{HP Labs Technical Report in 2009}.
        %\item \emph{Mentor : Dr. Krishnan Ramanathan}
        \end{compactitem}
@@ -294,9 +312,9 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \textit{Graduate Research Assistant}\hfill \textit{Aug 08 to June 09}\\
  \emph{Cognitive Assistant that Learns and  Organizes ( CALO )}
        \begin{compactitem}
-        \item Member of a team involved in the addition of new features to CALO, a system that extracts decisions from multi-party meetings  to enable the effective handling of feedbacks.
-        \item Also involved in evaluation of the Service Manager
-        \item Implementation used Java, Swing and libSVM
+        \item Member of a team working on CALO, a system that extracts decisions from multi-party meetings to enable the effective handling of feedbacks.
+        \item Also involved in the evaluation of new features to decision extraction process. 
+        \item Implementation used Java, Swing and libSVM.
        %\item \emph{Mentor : Prof. Stanley Peters}
        \end{compactitem}
 
@@ -305,8 +323,8 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \href{http://www.barc.ernet.in/}{\textbf{Bhabha Atomic Research Center, Trombay}}\hspace{0.1cm}\textit{Project Intern at DRHR}\hfill \textit{May 06 to July 06}\\
  \emph{Image Processing and Software Development for Simplifying Robot Trajectory Generation}
        \begin{compactitem}
-        \item {Built a system  that extracts information of a continuous path from any arbitrary raw image using  graph-theoretic methods and provides input to the indigenous \emph{Sensor-cum-Manipulator} ,a Parallel planar kinematic robot.}
-          \item {Implemented using C, Matlab(for image processing) and VB ( as a wrapper GUI)}
+        \item {Built a system  that extracts information of a continuous path from any arbitrary raw image using  graph-theoretic methods and provides input to the indigenous \emph{Sensor-cum-Manipulator}, a Parallel planar kinematic robot.}
+          \item {Implemented using C, Matlab(for image processing) and VB (as a wrapper GUI).}
         %\item \emph{Mentors : Mr. Gaurav Bhutani and Dr. T.A. Dwarakanath}
         \end{compactitem}
 
@@ -314,9 +332,9 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \section{\textbf{Selected Projects   }}
 %
 
-\textit{Role Discovery in Social Networks using DMR Based Topic Modeling} 
+\textit{Role Discovery in Social Networks using Dirichilet Multinomial Regression Based Topic Modeling} 
 \begin{compactitem}
-\item {}
+\item {TODO:}
 \item \emph{Instructor: Prof. Daphne Koller, Stanford University}
 \end{compactitem}
 \spc
@@ -324,7 +342,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \textit{Recommendation Systems based on Delicious and Twitter} 
 \begin{compactitem}
 \item {Implemented a People Recommendation System on Twitter (in Python) by a combination of several algorithms, that included collaborative filtering, network analysis and semantic consideration .}
-\item{Designed and implemented an URL Recommendation system by analysis of tags from \emph{Delicious}}
+\item{Designed and implemented an URL Recommendation system by analysis of tags from \emph{Delicious}.}
 %\item \emph{Instructor: Prof. Andreas Weigend, Stanford University}
 \end{compactitem}
 \spc
@@ -337,14 +355,14 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 
 \textit{Finding Answerers on Yahoo! Answers}
 \begin{compactitem}
-\item {Designed an implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and auxiliary information. The result can be used to determine the routing for the new questions.}
+\item {Designed and implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and other auxiliary information. The result could be used to determine the routing for the new questions.}
 %\item \emph{Instructor :  Prof.Jure Leskovic, Stanford University}
 \end{compactitem}
 \spc
 
 \textit{Analysis of Text Based Classifiers}
 \begin{compactitem}
-\item {Implemented and analyzed the performance of different Na\"{\i}ve Bayes classifiers on the 20-Newsgroups dataset, using Java and Lucene}
+\item {Implemented and analyzed the performance of different Na\"{\i}ve Bayes classifiers on the 20-Newsgroups dataset, using Java and Lucene.}
 %\item \emph{Instructors :  Prof.Chris Manning and Prof. Prabhakar Raghavan , Stanford University}
 \end{compactitem}
 \spc
@@ -385,7 +403,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \spc
 \textit{An Ontology-based Automatic Staging system for Cancer}
 \begin{compactitem}
-\item {Developed a Automatic Staging System for Breast Cancer over the NCI Thesaurus using SWRL, OWL and Prot\'{e}g\'{e}}
+\item {Developed a Automatic Staging System for Breast Cancer over the NCI Thesaurus using SWRL, OWL and Prot\'{e}g\'{e}}.
 %\item \emph{Instructor :  Prof. Mark Musen, Stanford University}
 \end{compactitem}
 \spc
@@ -428,7 +446,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \section{\textbf{Skills}}
 \emph{Languages}: Java, Pig, Python, C, SQL\\
 \emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), HBase \\
-\emph{Tools and  Platforms}: Mahout, Teradata,  Weka, R, Eclipse,\LaTeX{} , Octave\\
+\emph{Tools and  Platforms}: Mahout, Teradata, Weka, R, Eclipse, \LaTeX{}, Octave\\
 \emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
 
 
