--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -238,7 +238,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \href{http://www.apple.com}{\textbf{Apple Inc.}}\hfill \textit{Apr '10 to Mar '13}\\
 
 \begin{outerlist}
-\item[] Software Engineer - Maps Data Validation \hfill{May '13 - present}
+\item[] Software Engineer - Maps Data Insights \hfill{May '13 - present}
         \begin{innerlist}
 	\item TODO
         \end{innerlist}
@@ -248,23 +248,31 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \item[] Software Engineer - Internet Services \hfill{Jan '12 - May '13}
 
 	\begin{outerlist}
-		\item[] Reputation/Indirect Fraud Detection on iTunes Appstore \hfill{Sep '11 - May '13}
+		\item[] Reputation and Indirect Fraud Detection on iTunes AppStore \hfill{Sep '11 - May '13}
 		\begin{innerlist}
-			\item TODO
+			\item Responsible for the end-to-end development of the fraud solution to reputation fraud on iTunes AppStore as a part of a very small team - right from requirements gathering, conception, design, implementation and evaluation. 
+			\item Experienced with data mining, network analysis and machine learning on massive scales.
+			\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on graphs with billion nodes and tens of billions of edges.
+			\item Also responsible for communicating the working of system to different stakeholders.
+			\item System currently in production for more than a year and has a very high hit-rate.
+			\item Used Pig, Java MapReduce, Mahout, HBase, Sqoop on the Hadoop ecosystem.
 		\end{innerlist}
 	\end{outerlist}
 	
 	\begin{outerlist}
 		\item[] Account Creation Fraud Detection on iTunes \hfill{Jan '11 - May '12}
 		\begin{innerlist}
-			\item TODO
+			\item Designed and implemented a high performance and scalable subsystem of a system that risks account creations that works in the path of the transaction.
+			\item Implemented a scalable stream mining algorithm that works on continuous data streams and still handing hundreds of transactions per second.
+			\item Implementation and testing in Java.
 		\end{innerlist}
 	\end{outerlist}
 
 	\begin{outerlist}
 	\item[] Spam Detection on iTunes Ping comments \hfill{Apr '10 - June '11}
 	        \begin{innerlist}
-	        \item TODO Worked on machine learning techniques for spam detection on Ping.
+	        \item Worked on machine learning techniques for spam detection on Ping.
+	        
 	        \end{innerlist}
 	\end{outerlist}
 	
@@ -445,8 +453,8 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 
 \section{\textbf{Skills}}
 \emph{Languages}: Java, Pig, Python, C, SQL\\
-\emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), HBase \\
-\emph{Tools and  Platforms}: Mahout, Teradata, Weka, R, Eclipse, \LaTeX{}, Octave\\
+\emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), Spring, HBase, Mahout  \\
+\emph{Tools and  Platforms}: Teradata, Weka, R, Eclipse, \LaTeX{}, Octave\\
 \emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
 
 
