--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -58,7 +58,7 @@
             includefoot, % Uncomment to put page number above margin
             marginparwidth=1in,     % Length of section titles
             marginparsep=.02in,       % Space between titles and text
-            margin=0.2in,               % 1 inch margins
+            margin=0.1in,               % 1 inch margins
             includemp]{geometry}
 
 %% Use these lines for A4-sized paper
@@ -151,7 +151,9 @@
 % An itemize-style list with lots of space between items
 \newenvironment{outerlist}[1][\enskip\textbullet]%
         {\begin{itemize}[#1]}{\end{itemize}%
-         \vspace{-.6\baselineskip}}
+         \vspace{-0.6\baselineskip}}
+
+
 
 % An environment IDENTICAL to outerlist that has better pre-list spacing
 % when used as the first thing in a \section
@@ -199,22 +201,22 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 
 \section{\textbf{Education}}
 \href{http://www.stanford.edu/}{\textbf{Stanford University}},\hfill \textit{Sep '08 - Apr '10}
-\begin{outerlist}
+\begin{innerlist}
 \item[] M.S. \href{http://www.cs.stanford.edu/}{Computer Science}\hfill{GPA : 3.86 / 4.0}
       \begin{innerlist}
         \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to the elite few for graduate study in the US.
      
-         \item \emph{Relevant Coursework : } \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business (A+), \href{http://www.stanford.edu/}{Modern Applied Statistical Learning }, \href{http://www.stanford.edu/class/msande239/}{Computational Advertising(A+)}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search }(A),  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}(A), \href{http://cs345a.stanford.edu}{Data Mining}(A), \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis}.
+         \item \emph{Relevant Coursework:} \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business, \href{http://www.stanford.edu/}{Modern Applied Statistical Learning}, \href{http://www.stanford.edu/class/msande239/}{Computational Advertising}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search},  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}(A), \href{http://cs345a.stanford.edu}{Data Mining}, \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis}.
          %, Biomedical Systems Design(A+)
          %,  \href{http://www.stanford.edu/}{iPhone Application Programming}
          %, \href{http://cs245.stanford.edu}{Database Systems Principles}
         \end{innerlist}
-\end{outerlist}
+\end{innerlist}
 
 \blankline
 
 \href{http://www.bits-goa.ac.in/}{\textbf{Birla Institute of Technology and Science, Pilani - Goa Campus}}\hfill \textit{Aug 04 - Jun 08}
-\begin{outerlist}
+\begin{innerlist}
 \item[] M Sc.(Tech.) {Information Systems} \hfill{CGPA : 9.95/10.0}
         \begin{innerlist}
         \item Ranked \# 1 in Information Systems Department
@@ -222,21 +224,10 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
         \item \emph{Relevant Coursework : }Artificial Intelligence, Data Structures \& Algorithms, Software Engineering, Probability \& Statistics, Discrete Structures for Computer Science, Data Mining.
 %%        \item Course Topper in 20 courses, including Data Structures and Algorithms, Symbolic Logic and Software Engineering through my undergraduate study.
         \end{innerlist}
-\end{outerlist}
+\end{innerlist}
 
-%%{\textbf{DAV Boys' Sr. Sec. School Gopalapuram}}
-%%\begin{outerlist}
-%%\item[] AISSCE, May 2004 \hfill{95.2\%}
-%%        \begin{compactitem}
-%%        \item Listed in the Merit List by the \href{http://www.cbse.nic.in}{Central Board of Secondary Education (CBSE)} for proficiency in English.
-%%        \end{compactitem}
-%%\end{outerlist}
-%% Add CGPA here
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\textbf{Experience}}
-\href{http://www.apple.com}{\textbf{Apple Inc.}}\hfill \textit{Apr '10 to Mar '13}\\
-
+\href{http://www.apple.com}{\textbf{Apple Inc.}}\hfill \textit{Apr '10 to present}
 \begin{outerlist}
 \item[] Software Engineer - Maps Data Insights \hfill{May '13 - present}
         \begin{innerlist}
@@ -245,31 +236,31 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 \end{outerlist}
 
 \begin{outerlist}
-\item[] Software Engineer - Internet Services \hfill{Jan '12 - May '13}
+\item[] Software Engineer - Internet Services \hfill{Apr '10 - May '13}
 
 	\begin{outerlist}
-		\item[] Reputation and Indirect Fraud Detection on iTunes AppStore \hfill{Sep '11 - May '13}
+		\item[] Reputation and Indirect Fraud Detection on iTunes AppStore % \hfill{Sep '11 - May '13}
 		\begin{innerlist}
 			\item Responsible for the end-to-end development of the fraud solution to reputation fraud on iTunes AppStore as a part of a very small team - right from requirements gathering, conception, design, implementation and evaluation. 
 			\item Experienced with data mining, network analysis and machine learning on massive scales.
 			\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on graphs with billion nodes and tens of billions of edges.
 			\item Also responsible for communicating the working of system to different stakeholders.
 			\item System currently in production for more than a year and has a very high hit-rate.
-			\item Used Pig, Java MapReduce, Mahout, HBase, Sqoop on the Hadoop ecosystem.
+			\item Used Pig, Java MapReduce, Mahout and HBase on the Hadoop ecosystem.
 		\end{innerlist}
 	\end{outerlist}
 	
 	\begin{outerlist}
-		\item[] Account Creation Fraud Detection on iTunes \hfill{Jan '11 - May '12}
+		\item[] Account Creation Fraud Detection on iTunes %\hfill{Jan '11 - May '12}
 		\begin{innerlist}
 			\item Designed and implemented a high performance and scalable subsystem of a system that risks account creations that works in the path of the transaction.
 			\item Implemented a scalable stream mining algorithm that works on continuous data streams and still handing hundreds of transactions per second.
-			\item Implementation and testing in Java.
+			\item Implementation was carried out in Java.
 		\end{innerlist}
 	\end{outerlist}
 
 	\begin{outerlist}
-	\item[] Spam Detection on iTunes Ping comments \hfill{Apr '10 - June '11}
+	\item[] Spam Detection on iTunes Ping comments %\hfill{Apr '10 - June '11}
 	        \begin{innerlist}
 	        \item Worked on machine learning techniques for spam detection on Ping.
 	        
@@ -278,21 +269,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 	
 \end{outerlist}
 
-%\begin{outerlist}
-%\item[] Software Engineer \hfill{Jan '12 - May '12}
-%        \begin{innerlist}
-%	\item TODO
-%        \end{innerlist}
-%\end{outerlist}
-%
-%\begin{outerlist}
-%\item[] Software Engineer \hfill{Apr '10 - Apr '11}
-%        \begin{innerlist}
-%        \item Worked on machine learning techniques for spam detection on Ping.
-%        \end{innerlist}
-%\end{outerlist}
-
-\begin{outerlist}
+\begin{innerlist}
 \item[] Summer Intern \hfill{June '09 to Mar '10}
         \begin{innerlist}
         \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
@@ -300,7 +277,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
         \item {Project involved use and analysis of several state-of-the-art machine learning techniques for feature engineering, feature selection, skew handling in datasets, model comparisons for supervised learning, ensemble techniques for classifiers and evaluation of results.}
         \item {Used Java, libSVM, Weka.}
         \end{innerlist}
-\end{outerlist}
+\end{innerlist}
 
 \blankline
 
@@ -332,12 +309,12 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
  \emph{Image Processing and Software Development for Simplifying Robot Trajectory Generation}
        \begin{compactitem}
         \item {Built a system  that extracts information of a continuous path from any arbitrary raw image using  graph-theoretic methods and provides input to the indigenous \emph{Sensor-cum-Manipulator}, a Parallel planar kinematic robot.}
-          \item {Implemented using C, Matlab(for image processing) and VB (as a wrapper GUI).}
+          \item {Implemented using C, Matlab (for image processing) and VB (as a wrapper GUI).}
         %\item \emph{Mentors : Mr. Gaurav Bhutani and Dr. T.A. Dwarakanath}
         \end{compactitem}
 
 %\pagebreak
-\section{\textbf{Selected Projects   }}
+\section{\textbf{Selected Projects}}
 %
 
 \textit{Role Discovery in Social Networks using Dirichilet Multinomial Regression Based Topic Modeling} 
@@ -349,7 +326,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 
 \textit{Recommendation Systems based on Delicious and Twitter} 
 \begin{compactitem}
-\item {Implemented a People Recommendation System on Twitter (in Python) by a combination of several algorithms, that included collaborative filtering, network analysis and semantic consideration .}
+\item {Implemented a People Recommendation System on Twitter (in Python) by a combination of several algorithms, that included collaborative filtering and network analysis.}
 \item{Designed and implemented an URL Recommendation system by analysis of tags from \emph{Delicious}.}
 %\item \emph{Instructor: Prof. Andreas Weigend, Stanford University}
 \end{compactitem}
@@ -363,7 +340,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 
 \textit{Finding Answerers on Yahoo! Answers}
 \begin{compactitem}
-\item {Designed and implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and other auxiliary information. The result could be used to determine the routing for the new questions.}
+\item {Designed and implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and other auxiliary information. The result could be used to determine the routing for new questions.}
 %\item \emph{Instructor :  Prof.Jure Leskovic, Stanford University}
 \end{compactitem}
 \spc
@@ -452,9 +429,9 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 {R.T. Durai Prabhakaran, B.J.C. Babu, V.P. Agrawal, C.V. Krishna Kumar, \emph{A knowledge-based system for constituent material selection in polymer composite product design }-  Proceedings of ISRS-2006, International Symposium for Research Scholars, IIT-Madras.}
 
 \section{\textbf{Skills}}
-\emph{Languages}: Java, Pig, Python, C, SQL\\
+\emph{Languages}: Java, Pig, Python, C, SQL and basics of Hive.\\
 \emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), Spring, HBase, Mahout  \\
-\emph{Tools and  Platforms}: Teradata, Weka, R, Eclipse, \LaTeX{}, Octave\\
+\emph{Tools and  Platforms}: Weka, \LaTeX{}, Basics of R and Teradata\\
 \emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
 
 
