Formtting changes, added CS228 project, added matlab java in comments

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -319,7 +319,8 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 
 \textit{Role Discovery in Social Networks using Dirichilet Multinomial Regression Based Topic Modeling} 
 \begin{compactitem}
-\item {TODO:}
+\item{Implemented an unsupervised algorithm for identification of hierarchical roles in an organization using a combination of Social Network Analysis, Spectral Clustering and a variant of LDA (Latent Dirichilet Allocation).}
+%\item{Implemented using Java and Matlab}.
 \item \emph{Instructor: Prof. Daphne Koller, Stanford University}
 \end{compactitem}
 \spc
@@ -423,7 +424,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 %%\end{compactitem}
 
 \section{\textbf{Publications}}
-{C.V.Krishnakumar and Dr.Krishnan Ramanathan, \emph{STAIR : A System for Topical and Aggregated Information Retrieval} , Proceedings of  the  International Conference on Intelligent Human Computer Interaction (IHCI) 2009.}
+{C.V.Krishnakumar and Dr.Krishnan Ramanathan, \emph{STAIR : A System for Topical and Aggregated Information Retrieval}, Proceedings of  the  International Conference on Intelligent Human Computer Interaction (IHCI) 2009.}
 
 \spcless
 {R.T. Durai Prabhakaran, B.J.C. Babu, V.P. Agrawal, C.V. Krishna Kumar, \emph{A knowledge-based system for constituent material selection in polymer composite product design }-  Proceedings of ISRS-2006, International Symposium for Research Scholars, IIT-Madras.}
@@ -455,6 +456,11 @@ Consistent recipient of the \emph{Merit Scholarship} awarded by BITS Pilani to t
 %Assistant Professor and Head of Department, \\
 %BITS Pilani Goa Campus. \\
 %E-mail : bmd@bits-goa.ac.in\\
+
+%Mr. Vipul Pandey,\\
+%Apple Inc, \\
+%Cupertino, CA-95014 \\
+%E-mail : vipul@apple.com\\
 
 
 \end{document}
