--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -57,8 +57,8 @@
 \usepackage[paper=letterpaper,
             includefoot, % Uncomment to put page number above margin
             marginparwidth=1in,     % Length of section titles
-            marginparsep=.02in,       % Space between titles and text
-            margin=0.1in,               % 1 inch margins
+            marginparsep=.01in,       % Space between titles and text
+            margin=0.18in,               % 1 inch margins
             includemp]{geometry}
 
 %% Use these lines for A4-sized paper
@@ -142,7 +142,7 @@
 % empty lines allows for the function of the first example with the
 % readability of the second example.
 \renewcommand{\section}[2]%
-        {\pagebreak[2]\vspace{1.3\baselineskip}%
+        {\pagebreak[2]\vspace{0.8\baselineskip}%
          \phantomsection\addcontentsline{toc}{section}{#1}%
          \hspace{0in}%
          \marginpar{
@@ -171,9 +171,9 @@
 % This also tells LaTeX to preferably break a page on one of these gaps
 % if there is a needed pagebreak nearby.
 %\newcommand{\blankline}{\quad\pagebreak[1]}
-\newcommand{\blankline}{\vspace{0.25cm}}
-\newcommand{\spc}{\vspace{1.2mm}}
-\newcommand{\spcless}{\vspace{0.8mm}}
+\newcommand{\blankline}{\vspace{0.10cm}}
+\newcommand{\spc}{\vspace{1mm}}
+\newcommand{\spcless}{\vspace{1mm}}
 \newcommand{\spcmore}{\vspace{0.2cm}}
 %%%%%%%%%%%%%%%%%%%%%%%% End Helper Commands %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -194,7 +194,7 @@
 %
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
 739 E El Camino Real Apt 112 & \textit{Email:}\href{mailto:cvkkumar@cs.stanford.edu}{cvkkumar@cs.stanford.edu}\\
-Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476} 
+Sunnyvale, CA-94087   &  Ph: 408-462-5745 
 \end{tabular}
 
 \section{\textbf{Interests}} Large Scale Data Mining and Analysis, Machine Learning, Information Retrieval and Software Engineering
@@ -206,7 +206,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
       \begin{innerlist}
         \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to the elite few for graduate study in the US.
      
-         \item \emph{Relevant Coursework:} \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business, \href{http://www.stanford.edu/}{Modern Applied Statistical Learning}, \href{http://www.stanford.edu/class/msande239/}{Computational Advertising}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search},  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}(A), \href{http://cs345a.stanford.edu}{Data Mining}, \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis}.
+         \item \emph{Relevant Coursework:} \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business, \href{http://www-stat.stanford.edu/~tibs/stat315a.html}{Elements of Statistical Learning}, \href{http://www.stanford.edu/class/msande239/}{Computational Advertising}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search},  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}, \href{http://cs345a.stanford.edu}{Data Mining}, \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis}.
          %, Biomedical Systems Design(A+)
          %,  \href{http://www.stanford.edu/}{iPhone Application Programming}
          %, \href{http://cs245.stanford.edu}{Database Systems Principles}
@@ -228,56 +228,51 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 
 \section{\textbf{Experience}}
 \href{http://www.apple.com}{\textbf{Apple Inc.}}\hfill \textit{Apr '10 to present}
+%\begin{outerlist}
+%\item[] Software Engineer - Maps Data Insights \hfill{May '13 - present}
+%        \begin{innerlist}
+%	\item TODO
+%        \end{innerlist}
+%\end{outerlist}
 \begin{outerlist}
-\item[] Software Engineer - Maps Data Insights \hfill{May '13 - present}
-        \begin{innerlist}
-	\item TODO
-        \end{innerlist}
-\end{outerlist}
-
-\begin{outerlist}
-\item[] Software Engineer - Internet Services \hfill{Apr '10 - May '13}
-
+\item[] Software Engineer - Internet Services
 	\begin{outerlist}
 		\item[] Reputation and Indirect Fraud Detection on iTunes AppStore % \hfill{Sep '11 - May '13}
 		\begin{innerlist}
 			\item Responsible for the end-to-end development of the fraud solution to reputation fraud on iTunes AppStore as a part of a very small team - right from requirements gathering, conception, design, implementation and evaluation. 
 			\item Experienced with data mining, network analysis and machine learning on massive scales.
-			\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on graphs with billion nodes and tens of billions of edges.
-			\item Also responsible for communicating the working of system to different stakeholders.
+			\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on k-partite graphs with billions nodes and tens of billions of edges.
+			\item Responsible for communication of the working of system to different stakeholders.
 			\item System currently in production for more than a year and has a very high hit-rate.
 			\item Used Pig, Java MapReduce, Mahout and HBase on the Hadoop ecosystem.
 		\end{innerlist}
 	\end{outerlist}
-	
 	\begin{outerlist}
 		\item[] Account Creation Fraud Detection on iTunes %\hfill{Jan '11 - May '12}
 		\begin{innerlist}
 			\item Designed and implemented a high performance and scalable subsystem of a system that risks account creations that works in the path of the transaction.
-			\item Implemented a scalable stream mining algorithm that works on continuous data streams and still handing hundreds of transactions per second.
-			\item Implementation was carried out in Java.
+			\item Implemented a scalable stream mining algorithm that works on real time data streams.
+			\item Implementation in Java.
 		\end{innerlist}
 	\end{outerlist}
 
 	\begin{outerlist}
 	\item[] Spam Detection on iTunes Ping comments %\hfill{Apr '10 - June '11}
 	        \begin{innerlist}
-	        \item Worked on machine learning techniques for spam detection on Ping.
-	        
+	        \item Worked on machine learning techniques for spam detection on Ping. 
 	        \end{innerlist}
 	\end{outerlist}
-	
 \end{outerlist}
 
+\begin{outerlist}
+\item[]  Intern - Internet Services \hfill{June '09 to Mar '10}
 \begin{innerlist}
-\item[] Summer Intern \hfill{June '09 to Mar '10}
-        \begin{innerlist}
         \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
         \item {Part of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment. }
         \item {Project involved use and analysis of several state-of-the-art machine learning techniques for feature engineering, feature selection, skew handling in datasets, model comparisons for supervised learning, ensemble techniques for classifiers and evaluation of results.}
         \item {Used Java, libSVM, Weka.}
-        \end{innerlist}
 \end{innerlist}
+\end{outerlist}
 
 \blankline
 
@@ -299,7 +294,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
        \begin{compactitem}
         \item Member of a team working on CALO, a system that extracts decisions from multi-party meetings to enable the effective handling of feedbacks.
         \item Also involved in the evaluation of new features to decision extraction process. 
-        \item Implementation used Java, Swing and libSVM.
+        \item Implementation used Java and libSVM.
        %\item \emph{Mentor : Prof. Stanley Peters}
        \end{compactitem}
 
@@ -380,25 +375,24 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 %\end{compactitem}
 %\spc
 
-%\newpage
 \textit{RefMed - A Physician Referral and Review Service}
 \begin{compactitem}
 \item {Designed and developed a physician referral and review service that enables patients to review and rate the physicians and facilitates the physicians to recommend other doctors to their patients.}
 %\item \emph{Instructor :  Prof. Amar Das, Stanford University}
 \end{compactitem}
-\spc
-\textit{An Ontology-based Automatic Staging system for Cancer}
-\begin{compactitem}
-\item {Developed a Automatic Staging System for Breast Cancer over the NCI Thesaurus using SWRL, OWL and Prot\'{e}g\'{e}}.
-%\item \emph{Instructor :  Prof. Mark Musen, Stanford University}
-\end{compactitem}
-\spc
-\textit{Implementation Of a Search Engine for Personalized Information Retrieval by profiling of user data}
-\begin{compactitem}
-\item Designed and implemented  a prototype search engine that incorporates an additional dimension of Personalization through User Profiling for Enhanced relevancy.
-%\item \emph{Mentors : Dr. Bharat Deshpande and Mr. Mangesh Bedekar , BITS Pilani Goa Campus}
-\end{compactitem}
-\spc
+%\spc
+%\textit{An Ontology-based Automatic Staging system for Cancer}
+%\begin{compactitem}
+%\item {Developed a Automatic Staging System for Breast Cancer over the NCI Thesaurus using SWRL, OWL and Prot\'{e}g\'{e}}.
+%%\item \emph{Instructor :  Prof. Mark Musen, Stanford University}
+%\end{compactitem}
+%\spc
+%\textit{Implementation Of a Search Engine for Personalized Information Retrieval by profiling of user data}
+%\begin{compactitem}
+%\item Designed and implemented  a prototype search engine that incorporates an additional dimension of Personalization through User Profiling for Enhanced relevancy.
+%%\item \emph{Mentors : Dr. Bharat Deshpande and Mr. Mangesh Bedekar , BITS Pilani Goa Campus}
+%\end{compactitem}
+%\spc
 \textit{Time Table Generator}
 \begin{compactitem}
 \item Implemented a system for automating the process of timetable generation for a University with its constraints, using a sub-optimal graph coloring approach for Constraint Satisfaction.
@@ -411,11 +405,11 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 %%\item \emph{Mentor : Dr. J.V.Rao}
 %%\end{compactitem}
 %%\spc
-\textit{An Expert System for selection of Polymer Composite Systems }
-\begin{compactitem}
-\item Implemented a novel method for evaluation and ranking of constituent materials for composite products using \emph{TOPSIS} , an MADM (Multiple Attribute Decision Making) approach that ensures an optimum solution for the characteristics desired.
-%\item \emph{Mentor : Dr. Durai Prabhakaran, BITS Pilani Goa Campus}
-\end{compactitem}
+%\textit{An Expert System for selection of Polymer Composite Systems }
+%\begin{compactitem}
+%\item Implemented a novel method for evaluation and ranking of constituent materials for composite products using \emph{TOPSIS} , an MADM (Multiple Attribute Decision Making) approach that ensures an optimum solution for the characteristics desired.
+%%\item \emph{Mentor : Dr. Durai Prabhakaran, BITS Pilani Goa Campus}
+%\end{compactitem}
 %%\spc
 %%\textit{Software Development for Management of Merit-cum-Need Scholarship}\hfill \textit{Jan 07 -- May 07}
 %%\begin{compactitem}
@@ -430,7 +424,7 @@ Sunnyvale, CA-94087   &  \textit{Ph: 650-384-9476}
 {R.T. Durai Prabhakaran, B.J.C. Babu, V.P. Agrawal, C.V. Krishna Kumar, \emph{A knowledge-based system for constituent material selection in polymer composite product design }-  Proceedings of ISRS-2006, International Symposium for Research Scholars, IIT-Madras.}
 
 \section{\textbf{Skills}}
-\emph{Languages}: Java, Pig, Python, C, SQL and basics of Hive.\\
+\emph{Languages}: Java, Pig, Python, C, SQL.\\
 \emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), Spring, HBase, Mahout  \\
 \emph{Tools and  Platforms}: Weka, \LaTeX{}, Basics of R and Teradata\\
 \emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
