--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -215,12 +215,12 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 
 \blankline
 
-\href{http://www.bits-goa.ac.in/}{\textbf{Birla Institute of Technology and Science, Pilani - Goa Campus}}\hfill \textit{Aug 04 - Jun 08}
+\href{http://www.bits-goa.ac.in/}{\textbf{Birla Institute of Technology and Science, Pilani - Goa Campus}}\hfill \textit{Aug '04 - Jun '08}
 \begin{innerlist}
 \item[] M Sc.(Tech.) {Information Systems} \hfill{CGPA : 9.95/10.0}
         \begin{innerlist}
-        \item Ranked \# 1 in Information Systems Department
-        \item Recipient of the Silver Medal awarded by BITS to the second rank holder in the graduating class of 2008.
+        \item Ranked \#1 in Information Systems Department.
+        \item Recipient of the Silver Medal awarded by BITS to the second rank holder ampngst the graduating batch of 2008.
         \item \emph{Relevant Coursework : }Artificial Intelligence, Data Structures \& Algorithms, Software Engineering, Probability \& Statistics, Discrete Structures for Computer Science, Data Mining.
 %%        \item Course Topper in 20 courses, including Data Structures and Algorithms, Symbolic Logic and Software Engineering through my undergraduate study.
         \end{innerlist}
@@ -237,27 +237,26 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 \begin{outerlist}
 \item[] Software Engineer - Internet Services
 	\begin{outerlist}
-		\item[] Reputation and Indirect Fraud Detection on iTunes AppStore % \hfill{Sep '11 - May '13}
+		\item[] Fraud Detection on  AppStore % \hfill{Sep '11 - May '13}
 		\begin{innerlist}
-			\item Responsible for the end-to-end development of the fraud solution to reputation fraud on iTunes AppStore as a part of a very small team - right from requirements gathering, conception, design, implementation and evaluation. 
-			\item Experienced with data mining, network analysis and machine learning on massive scales.
-			\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on k-partite graphs with billions nodes and tens of billions of edges.
+			\item Responsible for the end-to-end development of a fraud solution to reputation fraud on iTunes AppStore as a part of a small team; involved right from requirements gathering, and conception to design, implementation and evaluation. 
+			\item Worked with data mining, network analysis and machine learning on massive scales.
+			\item Implemented a scalable version of the \emph{Belief propagation} that works on k-partite graphs with billions of nodes.
 			\item Responsible for communication of the working of system to different stakeholders.
-			\item System currently in production for more than a year and has a very high hit-rate.
+			\item System currently in production.
 			\item Used Pig, Java MapReduce, Mahout and HBase on the Hadoop ecosystem.
 		\end{innerlist}
 	\end{outerlist}
 	\begin{outerlist}
 		\item[] Account Creation Fraud Detection on iTunes %\hfill{Jan '11 - May '12}
 		\begin{innerlist}
-			\item Designed and implemented a high performance and scalable subsystem of a system that risks account creations that works in the path of the transaction.
-			\item Implemented a scalable stream mining algorithm that works on real time data streams.
-			\item Implementation in Java.
+			\item Designed and implemented a high performance scalable system that used  stream mining algorithm to risk creations on real time data streams.
+			\item Implementated in Java.
 		\end{innerlist}
 	\end{outerlist}
 
 	\begin{outerlist}
-	\item[] Spam Detection on iTunes Ping comments %\hfill{Apr '10 - June '11}
+	\item[] Spam Detection on iTunes Ping %\hfill{Apr '10 - June '11}
 	        \begin{innerlist}
 	        \item Worked on machine learning techniques for spam detection on Ping. 
 	        \end{innerlist}
@@ -270,18 +269,17 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
         \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
         \item {Part of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment. }
         \item {Project involved use and analysis of several state-of-the-art machine learning techniques for feature engineering, feature selection, skew handling in datasets, model comparisons for supervised learning, ensemble techniques for classifiers and evaluation of results.}
-        \item {Used Java, libSVM, Weka.}
+        \item {Used Java, LibSVM, Weka.}
 \end{innerlist}
 \end{outerlist}
 
 \blankline
 
-\href{http://www.hpl.hp.com/india/}{\textbf{Hewlett Packard Labs-India}\hspace{1cm}\textit{Research Intern}\hfill \textit{Jan 08 to June 08}}\\
+\href{http://www.hpl.hp.com/india/}{\textbf{Hewlett Packard Labs-India}\hspace{1cm}\textit{Research Intern}\hfill \textit{Jan '08 to June '08}}\\
 \emph{STAIR : System for Topical and Aggregated Information Retrieval.}
        \begin{compactitem}
-        \item {Developed the architecture and the prototype of STAIR - an IR system that  applied of a combination of Collaborative analysis and Focused Crawling techniques on the web documents to provide personalized, consolidated information relevant to the used as an aggregated PDF document.}
-        
-        \item {Implemented using Java, on top of Lucene. The semantics information were obtained from WordNet.}
+        \item {Developed the architecture and the prototype of STAIR - an IR system that  applied of a combination of Collaborative analysis and Focused Crawling techniques on the web documents to provide personalized, consolidated information relevant to the user as an aggregated PDF document.}        
+        \item {Implemented in on Java using Lucene. The semantics were obtained from WordNet.}
         \item Published as a \href{http://www.hpl.hp.com/techreports/2009/HPL-2009-51.pdf}{HP Labs Technical Report in 2009}.
        %\item \emph{Mentor : Dr. Krishnan Ramanathan}
        \end{compactitem}
@@ -289,12 +287,12 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 \blankline
 
 \href{http://www-csli.stanford.edu/}{\textbf{Center for Study of Language and Information, Stanford University}}\\
-\textit{Graduate Research Assistant}\hfill \textit{Aug 08 to June 09}\\
+\textit{Graduate Research Assistant}\hfill \textit{Aug '08 to June '09}\\
  \emph{Cognitive Assistant that Learns and  Organizes ( CALO )}
        \begin{compactitem}
         \item Member of a team working on CALO, a system that extracts decisions from multi-party meetings to enable the effective handling of feedbacks.
         \item Also involved in the evaluation of new features to decision extraction process. 
-        \item Implementation used Java and libSVM.
+        \item Implementation used Java and LibSVM.
        %\item \emph{Mentor : Prof. Stanley Peters}
        \end{compactitem}
 
@@ -312,14 +310,6 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 \section{\textbf{Selected Projects}}
 %
 
-\textit{Role Discovery in Social Networks using Dirichilet Multinomial Regression Based Topic Modeling} 
-\begin{compactitem}
-\item{Implemented an unsupervised algorithm for identification of hierarchical roles in an organization using a combination of Social Network Analysis, Spectral Clustering and a variant of LDA (Latent Dirichilet Allocation).}
-%\item{Implemented using Java and Matlab}.
-\item \emph{Instructor: Prof. Daphne Koller, Stanford University}
-\end{compactitem}
-\spc
-
 \textit{Recommendation Systems based on Delicious and Twitter} 
 \begin{compactitem}
 \item {Implemented a People Recommendation System on Twitter (in Python) by a combination of several algorithms, that included collaborative filtering and network analysis.}
@@ -327,10 +317,17 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 %\item \emph{Instructor: Prof. Andreas Weigend, Stanford University}
 \end{compactitem}
 \spc
+\textit{Role Discovery in Social Networks using Dirichlet Multinomial Regression Based Topic Modeling} 
+\begin{compactitem}
+\item{Implemented an unsupervised algorithm for identification of hierarchical roles in an organization using a combination of Social Network Analysis, Spectral Clustering and a variant of LDA (Latent Dirichlet Allocation).}
+%\item{Implemented using Java and Matlab}.
+\item \emph{Instructor: Prof. Daphne Koller, Stanford University}
+\end{compactitem}
+\spc
 \textit{URL Recommendation Based on Asymmetric Tag Similarity and Diffusion-Based Grouping}
 \begin{compactitem}
 \item {Implemented an URL Recommendation system by analysis of tag similarity using data from ShareThis and Delicious using MapReduce and Partition based Joins on top of the Aster Cluster.}
-%\item \emph{Instructors : Prof. Jeff Ullman and Prof. Anand Rajaraman , Stanford University}
+%\item \emph{Instructors : Prof. Jeff Ullman and Prof. Anand Rajaraman, Stanford University}
 \end{compactitem}
 \spc
 
@@ -441,7 +438,7 @@ Consistent recipient of the \emph{Merit Scholarship} awarded by BITS Pilani to t
 
 \spc
 
-{Recipient of the Merit Certificate,awarded to the top 0.1\% of students, for proficiency in English in AISSCE from the CBSE, 2004.}
+{Recipient of the Merit Certificate, awarded to the top 0.1\% of students, for proficiency in English in AISSCE from the CBSE, 2004.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%% Reference %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
