Incorporated Lavanya's suggestions

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -240,7 +240,7 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 		\item[] Fraud Detection on  AppStore % \hfill{Sep '11 - May '13}
 		\begin{innerlist}
 			\item Responsible for the end-to-end development of a fraud solution to reputation fraud on iTunes AppStore as a part of a small team; involved right from requirements gathering, and conception to design, implementation and evaluation. 
-			\item Worked with data mining, network analysis and machine learning on massive scales.
+			\item Worked on applying data mining, network analysis and machine learning techniques on massive scale data.
 			\item Implemented a scalable version of the \emph{Belief propagation} that works on k-partite graphs with billions of nodes.
 			\item Responsible for communication of the working of system to different stakeholders.
 			\item System currently in production.
