Added one comment on Ping

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -258,7 +258,8 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 	\begin{outerlist}
 	\item[] Spam Detection on iTunes Ping %\hfill{Apr '10 - June '11}
 	        \begin{innerlist}
-	        \item Worked on machine learning techniques for spam detection on Ping. 
+	        \item Worked on spam detection on iTunes Ping using machine learning. 
+        	        \item Involved in feature engineering, implementation and evaluation of the system. 
 	        \end{innerlist}
 	\end{outerlist}
 \end{outerlist}
