Incorporated Lavanya's suggestions

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -348,7 +348,7 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 
 \textit{Comparison of Similarity Search Algorithms over Inverted Indexes}
 \begin{compactitem}
-\item {Implemented and analyzed the performance of commonly used indexing similarity search algorithms - Term-at-a-Time and Document-at-a-Time. Also optimized the algorithms  with efficient index compression.}
+\item {Implemented and analyzed the performance of commonly used indexing similarity search algorithms: Term-at-a-Time and Document-at-a-Time. Also optimized the algorithms  with efficient index compression.}
 %\item \emph{Instructors :  Prof.Andrei Broder and Prof. Vanja Josifovski, Stanford University}
 \end{compactitem}
 \spc
