--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -299,11 +299,11 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 
 \blankline
 
-\href{http://www.barc.ernet.in/}{\textbf{Bhabha Atomic Research Center, Trombay}}\hspace{0.1cm}\textit{Project Intern at DRHR}\hfill \textit{May 06 to July 06}\\
+\href{http://www.barc.ernet.in/}{\textbf{Bhabha Atomic Research Center}}\hspace{0.2cm}\textit{Intern at Department of Remote Handling and Robotics}\hfill \textit{May '06 to July '06}\\
  \emph{Image Processing and Software Development for Simplifying Robot Trajectory Generation}
        \begin{compactitem}
-        \item {Built a system  that extracts information of a continuous path from any arbitrary raw image using  graph-theoretic methods and provides input to the indigenous \emph{Sensor-cum-Manipulator}, a Parallel planar kinematic robot.}
-          \item {Implemented using C, Matlab (for image processing) and VB (as a wrapper GUI).}
+        \item {Built a system  that extracts information of a continuous path from any arbitrary raw image using  graph-theoretic methods and provides input to the indigenous \emph{Sensor-cum-Manipulator}, a Parallel Planar Kinematic Robot.}
+          \item {Implemented using C, Matlab (for image processing) and VB (for a wrapper GUI).}
         %\item \emph{Mentors : Mr. Gaurav Bhutani and Dr. T.A. Dwarakanath}
         \end{compactitem}
 
