CS322 project description slightly modified

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -334,7 +334,7 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 
 \textit{Finding Answerers on Yahoo! Answers}
 \begin{compactitem}
-\item {Designed and implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and other auxiliary information. The result could be used to determine the routing for new questions.}
+\item {Designed and implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and other auxiliary information. The result could be used to route new questions to potential answerers.}
 %\item \emph{Instructor :  Prof.Jure Leskovic, Stanford University}
 \end{compactitem}
 \spc
