CS322 project description slightly modified

--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -394,7 +394,7 @@ Sunnyvale, CA-94087   &  Ph: 408-462-5745
 \textit{Time Table Generator}
 \begin{compactitem}
 \item Implemented a system for automating the process of timetable generation for a University with its constraints, using a sub-optimal graph coloring approach for Constraint Satisfaction.
-%\item{Algorithms implemented in C. UI implemented in VC++}
+%\item{Implemented in C}
 \end{compactitem}
 \spc
 %%\textit{Comprehending PageRank - its analysis and implementation }\hfill \textit{Aug 07 -- Dec 07}
